# inkterm

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
inkterm/: __init__.py  colors.py  config.py  core.py  utils.py
inkterm/core/: base.py  config.py  styles.py
inkterm/utils/: transformer.py
