[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inkterm"
version = "0.1.2"
authors = [
    { name = "Freddy Rodriguez", email = "freddyrdev@gmail.com" }
]
description = "Color labrary for CLI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/freddyrdev/inkterm"